# utl_firmware

./: .gitmodules  LICENSE
.devcontainer/: Dockerfile  build.sh
electrochemical_tester_with_bluetooth/: CMakeLists.txt  electrochemical_tester_with_bluetooth.code-workspace
electrochemical_tester_with_bluetooth/.devcontainer/: devcontainer.json
electrochemical_tester_with_bluetooth/boards/: app.overlay
electrochemical_tester_with_bluetooth/src/: main.c
electrochemical_tester_with_bluetooth/src/application/: ad5940_clock_init.c  ad5940_clock_init.h  ad5940_electrochemical_calibration.c  ad5940_electrochemical_calibration.h  ad5940_intc0_lock.h  test_ad5940_buffer_size.h  test_ad5940_electrochemical_ca.c  test_ad5940_electrochemical_ca.h  test_ad5940_electrochemical_calibration.c  test_ad5940_electrochemical_calibration.h  test_ad5940_electrochemical_calibration_result.c  test_ad5940_electrochemical_calibration_result.h  test_ad5940_electrochemical_cv.c  test_ad5940_electrochemical_cv.h  test_ad5940_electrochemical_dpv.c  test_ad5940_electrochemical_dpv.h  test_ad5940_init.c  test_ad5940_init.h  test_ad5940_lock.c  test_ad5940_lock.h  test_ad5940_parameters.c  test_ad5940_parameters.h  test_ad5940_temperature.c  test_ad5940_temperature.h  utl_ad5940_electrochemical_parameters.h  utl_ad5940_electrochemical_utility_parameters.c  utl_ad5940_electrochemical_utility_parameters.h  utl_ad5940_temperature_parameters.c  utl_ad5940_temperature_parameters.h
electrochemical_tester_with_bluetooth/src/port/ad5940/: ad5940_port_gpio.c  ad5940_port_intc0_impl_zephyr.c  ad5940_port_intc1_impl_zephyr.c  ad5940_port_reset_impl_zephyr.c  ad5940_port_reset_impl_zephyr.h  ad5940_port_spi_impl_zephyr.c  ad5940_port_spi_impl_zephyr.h
electrochemical_tester_with_bluetooth/src/port/application/: ad5940_intc0_lock_impl_zephyr.c  ad5940_intc0_lock_impl_zephyr.h
electrochemical_tester_with_bluetooth/src/port/sdk/ad5940/: ad5940_port_delay_impl_zephyr.c  ad5940_port_gpio_impl_zephyr.c  ad5940_port_gpio_impl_zephyr.h  ad5940_port_intc0_impl_zephyr.c  ad5940_port_intc0_impl_zephyr.h  ad5940_port_spi_impl_zephyr.c
electrochemical_tester_with_bluetooth/src/port/task/ad5940_application/: ad5940_application_impl_zephyr.c  ad5940_application_impl_zephyr.h
electrochemical_tester_with_bluetooth/src/port/task/ad5940_task/: ad5940_task_impl_zephyr.c  ad5940_task_impl_zephyr.h
electrochemical_tester_with_bluetooth/src/port/task/command_receiver/: command_receiver_impl_zephyr.c  command_receiver_impl_zephyr.h
electrochemical_tester_with_bluetooth/src/resource/: ad5940_hardware.c
electrochemical_tester_with_bluetooth/src/resources/: ad5940_hardware.h
electrochemical_tester_with_bluetooth/src/task/ad5940_application/: ad5940_application_adc.c  ad5940_application_adc.h  ad5940_application_command.c  ad5940_application_command.h  ad5940_application_private.h
electrochemical_tester_with_bluetooth/src/task/ad5940_task/: ad5940_task_adc.c  ad5940_task_adc.h  ad5940_task_command.c  ad5940_task_command.h  ad5940_task_private.h
electrochemical_tester_with_bluetooth/src/task/command_receiver/: command_receiver.c  command_receiver.h
electrochemical_tester_with_bluetooth/src/wdt/: watchdog0.c  watchdog0.h  watchdog0_wdt.c
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/: CMakeLists.txt  prj.conf
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/src/: main.c
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/src/device/: device_ble.c  device_ble.h  device_ble_waiting_inited.h  device_buttons.c  device_buttons.h  device_lights.c  device_lights.h
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/src/driver/: driver_uart.c  driver_uart.h  driver_uart_fifo.h
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/src/task/: task_ble.c  task_ble.h  task_buttons.c  task_buttons.h  task_thread.c  task_thread.h
simple_tutorial/peripheral_uart_tutorial_2024-08-09-12-42/src/utility/: utility_sleep.c  utility_sleep.h
simple_tutorial/zephyr_bluetooth_example/: CMakeLists.txt  zephyr_bluetooth_example.code-workspace
simple_tutorial/zephyr_bluetooth_example/prj/: prj.conf
simple_tutorial/zephyr_bluetooth_example/src/: main.c
simple_tutorial/zephyr_bluetooth_example/src/config/: bluetooth_config.c  bluetooth_config.h
simple_tutorial/zephyr_bluetooth_example/src/lock/: bluetooth_config_lock.c  bluetooth_config_lock.h
simple_tutorial/zephyr_bluetooth_example/src/on_receive/: on_receive.h  on_receive_back.c
simple_tutorial/zephyr_bluetooth_example/src/thread/: bluetooth_send_random_bytes_thread.c
utils/ble/ble_simple/: CMakeLists.txt  ble_simple.h
utils/ble/ble_simple/zephyr/: ble_simple_impl_zephyr.c  ble_simple_impl_zephyr.h
utils/gpio/: CMakeLists.txt
utils/gpio/debounce/zephyr/: gpio_debounce.c  gpio_debounce.h
utils/ic/ad5940/: CMakeLists.txt
utils/ic/ad5940/application/electrochemical/: ad5940_electrochemical_ca.h  ad5940_electrochemical_cv.h  ad5940_electrochemical_dpv.h  ad5940_electrochemical_eis.h
utils/ic/ad5940/cmake/: ad5940.cmake
utils/ic/ad5940/main/: ad5940_main.c  ad5940_main.h
utils/ic/ad5940/utils/: ad5940_utils.h  ad5940_utils_adc.c  ad5940_utils_adc.h  ad5940_utils_afe.c  ad5940_utils_afe.h  ad5940_utils_clock.h  ad5940_utils_fifo.c  ad5940_utils_fifo.h  ad5940_utils_gpio.c  ad5940_utils_gpio.h  ad5940_utils_hsdac.c  ad5940_utils_hsdac.h  ad5940_utils_lpdac.c  ad5940_utils_lpdac.h  ad5940_utils_power.c  ad5940_utils_power.h  ad5940_utils_sequence_generator.c  ad5940_utils_sequence_generator.h  ad5940_utils_struct.h
utils/kernel_sleep/: CMakeLists.txt  kernel_sleep.h
utils/kernel_sleep/zephyr/: kernel_sleep_impl_zephyr.c  kernel_sleep_impl_zephyr.h
virus_detector/: CMakeLists.txt  Kconfig
virus_detector/boards/: app.overlay
virus_detector/prj/: prj.conf
virus_detector/src/: main.c
virus_detector/src/device/ad5940/: ad5940_init.h  ad5940_lock.c
virus_detector/src/device/fan/: fan.c  fan.h  fan_init.h
virus_detector/src/device/pump/: pump.c  pump.h
virus_detector/src/device/solenoid_valve/: solenoid_valve.h
(+141 files in other folders)
